2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* stddef.h (S_PRINTF, S_PUTCHAR): Also consider [_ENABLE_TESTS].
	* headers.m4: Link files into `sysroot/include/' instead of `include/'.

	* Makefile.am (t_addr_CPPFLAGS, t_addr_trans_CPPFLAGS, t_rpc_CPPFLAGS):
	Remove special `printf' handling.

	* stddef.h (S_PUTCHAR): Define analogously to `S_PRINTF'.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h: Include <hurd/stddef.h>.
	[ASM]: Only define relevant macros.
	(EXCEPTION_STACK_SIZE_LOG2): Define.
	(EXCEPTION_STACK_SIZE): Define.
	* stddef.h [ASM]: Only define relevant macros.
	(PAGESIZE): Don't append C type specifier.
	(PAGESIZE_LOG2): Likewise.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap.h (slot_lookup_rel): Remove parameter type.  Update users.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_copy): Copy SOURCE's discardability predicate and
	priority.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* activity.h (activity_stats): Take additional parameter,
	until_period.

2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_status): Define.
	(object_dirty): Likewise.
	(object_referenced): Likewise.
	(object_status): New method.

	* folio.h (struct folio): Add fields dirty and referenced.
	(folio_object_referenced): New function.
	(folio_object_referenced_set): Likewise.
	(folio_object_dirty): Likewise.
	(folio_object_dirty_set): Likewise.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity_stats): Add field period.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* thread.h (THREAD_EXCEPTION_PAGE_SLOT): Correctly define to 2.

2008-03-01  Neal H. Walfield  <neal@gnu.org>

	* rpc.h (RPC_SIMPLE_): If the send is interrupted, retry.
	(RPC_): If the call is interrupted, retry.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(t_addr_CPPFLAGS): Replace use of $(COMMON_CPPFLAGS)
	with use of $(CHECK_CPPFLAGS).