@@ -1,3 +1,9 @@
+2008-05-30  Neal H. Walfield  <neal@gnu.org>
+
+	* trace.h: New file.
+	* Makefile.am (includehurd_HEADERS): Add trace.c.
+	* headers.m4: Link sysroot/include/hurd/trace.h to trace.h.
+
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* stddef.h (S_PRINTF, S_PUTCHAR): Also consider [_ENABLE_TESTS].
